@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0
hide circle
hide methods

title US017 Domain Model

class StoreNetworkManager{
}





class Agency{
ID
name
telephoneNumber
emailAddress
address
}



class Agent {
    agency
}

class Employee{
    id
    name
    phoneNumber
    email
    civilNumber
    taxNumber
    password
}

class AnnouncementAvailable{
    id
    listingDate
    comission
    typeBusiness
    requestPrice
}

class AnnouncementSold{
    id
    listingDate
    comission
    typeBusiness
    requestPrice
    soldDate
    soldPrice
}


class Property{
propertyID
type
location
area
distanceCenter
propertyDescription
photograph
}

class Land{}

class Apartment{
numberBedrooms
numberBath
numberParking
equipment
}

class House{
numberBedrooms
numberBath
numberParking
equipment
basement
loft
sunExposure
}

Agent "*" -- "1" Agency:work at>
StoreNetworkManager "1" -- "*" Agency: manages  >
Employee<|--StoreNetworkManager
Employee <|-- Agent
Property <|-- Land
Property <|-- House
Property <|-- Apartment
Property "*"  - "1" Agent : publish <
AnnouncementAvailable "1"-> "1"AnnouncementSold : can become >
Property"1"-->"1"AnnouncementAvailable: is the physical part of >


@enduml